watch k8s pod log .and push to websocket client
